Cleaned up old statuses that were only used in tests, and tested the mapping between internal and external statuses